--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -35,6 +35,10 @@
 			<button id="generate">Publish Level</button>
 		</nav>
 		<br>
+		<label for="level-name">Level name:</label>
+		<br>
+		<input id="level-name" />
+		<br>
 		<p id="error-message" class="error" hidden></p>
 		<br>
 		<br>
