--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -38,7 +38,7 @@
 		<br>
 		<br>
 		<div id="screenshots"></div>
-		<button id="addScreenshot">Add Screenshot</button>
+		<button id="add-screenshot">Add Screenshot</button>
 		<br>
 		<br>
 		<p id="error-message" class="error" hidden></p>
