--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 	<nav>
 		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Login/"><button>Login</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Create-Account/"><button>Create Account</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Upload-Program/"><button>Upload Program</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/"><button>Maze Escape Level Editor</button></a></h1>
 	</nav>
-	<label for="sort">Sort by:</label>
-	<select id="sort" value="newest-oldest">
-		<option value="newest-oldest">Newest to oldest</option>
-		<option value="oldest-newest">Oldest to newest</option>
-	</select>
+	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
+		<label for="sort">Sort by:</label>
+		<select id="sort" value="newest-oldest">
+			<option value="newest-oldest">Newest to oldest</option>
+			<option value="oldest-newest">Oldest to newest</option>
+		</select>
+	</div>
 	<br>
 	<div id="programs"></div>
 </body>
