--- a/Login/index.html
+++ b/Login/index.html
@@ -15,7 +15,7 @@
 		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Login</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Create-Account/"><button>Create Account</button></a></h1>
 	</nav>
 	<br>
-	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
+	<div  class="generic-container">
 		<h2>Login:</h2>
 		<br>
 		<label for="username">Username:</label>
