--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -15,13 +15,13 @@
 	<nav>
 		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img> TI-Nspire Programs - Maze Escape Level Editor&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/Published-Levels"><button>Published Levels</button></a></h1>
 	</nav>
-	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
+	<div class="generic-container">
 		<h2>Note:</h2>
 		<p>A level must have one (no more and no less) player spawn, and a level must have at least one level finish. It must be possible to navigate from the player spawn to a level finish.</p>
 		<p>Once your level is completed, click "Publish Level" which will publish your level. Your level can then be viewed on the <a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/Published-Levels/">Published Levels</a> page. If your level is used, the name/pseudonym/nickname you publish your level under will be used for credit.</p>
 	</div>
 	<br>
-	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
+	<div class="generic-container">
 		<nav>
 			<button id="reset">Reset</button>
 			<label for="tool">&nbsp;&nbsp;&nbsp;Tool:</label>
