--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<select id="sort" value="newest-oldest">
 			<option value="newest-oldest">Newest to oldest</option>
 			<option value="oldest-newest">Oldest to newest</option>
+			<option value="top-voted">Most votes</option>
+			<option value="bottom-voted">:Least votes</option>
 		</select>
 	</div>
 	<div id="programs"></div>
