--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<option value="newest-oldest">Newest to oldest</option>
 			<option value="oldest-newest">Oldest to newest</option>
 			<option value="top-voted">Most votes</option>
-			<option value="bottom-voted">:Least votes</option>
+			<option value="bottom-voted">Least votes</option>
 		</select>
 	</div>
 	<div id="programs"></div>
