--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</nav>
 	<div class="generic-container">
 		<label for="sort">Sort by:</label>
-		<select id="sort" value="newest-oldest">
+		<select id="sort">
 			<option value="newest-oldest">Newest to oldest</option>
 			<option value="oldest-newest">Oldest to newest</option>
 			<option value="top-voted">Most votes</option>
