--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	</nav>
 	<div class="generic-container">
 		<label for="sort">Sort by:</label>
-		<select id="sort">
+		<select id="sort" value="no-order">
+			<option value="no-order" hidden></option>
 			<option value="newest-oldest">Newest to oldest</option>
 			<option value="oldest-newest">Oldest to newest</option>
 			<option value="top-voted">Most votes</option>
