--- a/Dev/index.html
+++ b/Dev/index.html
@@ -19,8 +19,12 @@
 		<h2>TI-Nspire Dev</h2>
 		<p>Programming TI-Nspire calculators is easy! On TI-Nspire Programs, not only can you find programs for TI-Nspire calculators, but you also have access to a number of simple tutorials on how to get started making your first TI-Nspire calculator program.</p>
 	</div>
+	<br>
 	<div class="generic-container">
-		<h3></h3>
+		<h3>Tutorials:</h3>
+		<li>
+			<ul>Tutorial 1 - <a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Tutorials/Getting-set-up">Getting set up</a></ul>
+		</li>
 	</div>
 </body>
 
