--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -19,14 +19,16 @@
 		<h2>Luna</h2>
 		<p>One of the best tools to compile Lua programs into executables runnable by a TI-Nspire calculator is Luna.</p>
 	</div>
+	<br>
 	<div class="generic-container">
 		<h3>How do I get Luna?</h3>
 		<p>You can compile the latest version of Luna <a href="https://github.com/ndless-nspire/Luna">here</a> or download Luna v0.2 (which works perfectly fine) below.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Luna/luna.zip"><button>Luna v0.2</button></a>
 	</div>
+	<br>
 	<div class="generic-container">
 		<h3>I have Luna, what next? How do I use Luna?</h3>
-		<p>Luna can be run from cmd (command prompt) in windows likeso: <pre class="code">luna.exe "lua program filename.lua" "output file filename.tns"</pre>.</p>
+		<p>Luna can be run from cmd (command prompt) in windows likeso: <code>luna.exe "lua program filename.lua" "output file filename.tns"</code>.</p>
 	</div>
 </body>
 
