--- a/Dev/index.html
+++ b/Dev/index.html
@@ -22,9 +22,9 @@
 	<br>
 	<div class="generic-container">
 		<h3>Tutorials:</h3>
-		<li>
-			<ul>Tutorial 1 - <a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Tutorials/Getting-set-up">Getting set up</a></ul>
-		</li>
+		<ul>
+			<li>Tutorial 1 - <a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Tutorials/Getting-set-up">Getting set up</a></li>
+		</ul>
 	</div>
 </body>
 
