--- a/Dev/index.html
+++ b/Dev/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Post Article&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Luna/"><button>Luna</button></a></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Post Article&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Luna/"><button>Luna</button></a></h1>
 	</nav>
 	<div class="generic-container">
 		<h2>TI-Nspire Dev</h2>
@@ -24,6 +24,7 @@
 		<h3>Tutorials:</h3>
 		<ul>
 			<li>Tutorial 1 - <a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Tutorials/Getting-set-up">Getting set up</a></li>
+			<li>Tutorial 2 - <a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Tutorials/Intro-to-Lua">Intro to Lua</a></li>
 		</ul>
 	</div>
 </body>
