--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -28,7 +28,7 @@
 	<br>
 	<div class="generic-container">
 		<h3>I have Luna, what next? How do I use Luna?</h3>
-		<p>Luna can be run from cmd (command prompt) in windows likeso: <code>luna.exe "lua program filename.lua" "output file filename.tns"</code>.</p>
+		<p>Luna can be run from cmd (command prompt) in windows likeso: <code style="background-color: rgb(180, 180, 180);">luna.exe "lua program filename.lua" "output file filename.tns"</code>.</p>
 	</div>
 </body>
 
