--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -22,14 +22,13 @@
 	<br>
 	<div class="generic-container">
 		<h3>How do I get Luna?</h3>
-		<p>You can compile the latest version of Luna <a href="https://github.com/ndless-nspire/Luna">here</a> or download Luna v0.2 (which works perfectly fine) below.</p>
+		<p>You can compile the latest version of Luna <a href="https://github.com/ndless-nspire/Luna">here</a> or download Luna v0.2 (which works perfectly fine) below (simply unzip the downloaded file to use luna.exe).</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Luna/luna.zip"><button>Luna v0.2</button></a>
 	</div>
 	<br>
 	<div class="generic-container">
 		<h3>I have Luna, what next? How do I use Luna?</h3>
-		<p>Luna can be run from cmd (command prompt) in windows likeso: <code style="background-color: rgb(180, 180, 180);">luna.exe "lua program filename.lua" "output file filename.tns"</code>.</p>
+		<p>Luna can be run from cmd (the command prompt) on a windows system likeso: <code style="background-color: rgb(180, 180, 180);">luna.exe "lua program filename.lua" "output file filename.tns"</code></p>
 	</div>
 </body>
-
 </html>
