--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Post Article&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/"><button>Dev</button></a></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Luna&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/"><button>Dev</button></a></h1>
 	</nav>
 	<div class="generic-container">
 		<h2>Luna</h2>
@@ -29,6 +29,7 @@
 	<div class="generic-container">
 		<h3>I have Luna, what next? How do I use Luna?</h3>
 		<p>Luna can be run from cmd (the command prompt) on a windows system likeso: <code style="background-color: rgb(180, 180, 180);">luna.exe "lua program filename.lua" "output file filename.tns"</code></p>
+		<p>To learn about writing lua programs for Ti-Nspire calculators check out the <a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Dev/">tutorials</a>.</p>
 	</div>
 </body>
 </html>
