--- a/Dev/index.html
+++ b/Dev/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Post Article&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Luna/"><button>Luna</button></a></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Dev&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Luna/"><button>Luna</button></a></h1>
 	</nav>
 	<div class="generic-container">
 		<h2>TI-Nspire Dev</h2>
