--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -8,6 +8,12 @@
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/CDN/CSS/CodeBlocks/CodeBlocks.css" />
+	<style>
+		.code {
+			background-color: rgb(190, 190, 190);
+			padding: 5px;
+		}
+	</style>
 	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/scripts.mjs" defer></script>
 </head>
 
@@ -32,4 +38,5 @@
 		<p>To learn about writing lua programs for Ti-Nspire calculators check out the <a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Dev/">tutorials</a>.</p>
 	</div>
 </body>
+
 </html>
