--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<title>TI-Nspire Programs</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5M8E1KMEV"></script>
+	<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-F5M8E1KMEV');</script>
 	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/scripts.mjs" defer></script>
 </head>
 
