--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -32,7 +32,7 @@
 				<option value="Level Finish">Level Finish</option>
 			</select>
 			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-			<button id="generate">Publish Level</button>
+			<button id="publish">Publish Level</button>
 		</nav>
 		<br>
 		<label for="level-name">Level name:</label>
