--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -14,7 +14,7 @@
 			padding: 5px;
 		}
 	</style>
-	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/scripts.mjs" defer></script>
+	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/scripts.js" defer></script>
 </head>
 
 <body>
