--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -11,9 +11,15 @@
 </head>
 
 <body>
-	<nav>
+	<!--<nav>
 		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Create Account</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Login/"><button>Login</button></a></h1>
-	</nav>
+	</nav>-->
+	<script type="module">
+		import { Account, nav } from "./Modules/Tools.js";
+		if (Account) {
+			nav("Upload Program", "Upload-Program", "Maze Escape Level Editor", "Maze-Escape-Level-Editor");
+		}
+	</script>
 	<br>
 	<div  class="generic-container">
 		<h2>Create Account:</h2>
