--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -11,13 +11,12 @@
 </head>
 
 <body>
-	<!--<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Create Account</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Login/"><button>Login</button></a></h1>
-	</nav>-->
 	<script type="module">
 		import { Account, nav } from "../Modules/Tools.js";
 		if (Account) {
 			nav("Upload Program", "Upload-Program", "Maze Escape Level Editor", "Maze-Escape-Level-Editor");
+		} else {
+			nav("Create Account", "Create-Account", "Login", "Login");
 		}
 	</script>
 	<br>
