--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Login/"><button>Login</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Create-Account/"><button>Create Account</button></a>&nbsp;&nbsp&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Upload-Program/"><button>Upload Program</button></a><!-- &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Articles/"><button>Articles</button></a> -->&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/"><button>Maze Escape Level Editor</button></a></h1>
-	</nav>
+	<script type="module">
+		import { Account, nav } from "../Modules/Tools.js";
+		if (Account) {
+			nav("Upload Program", "Upload-Program", "Maze Escape Level Editor", "Maze-Escape-Level-Editor");
+		}
+	</script>
 	<div class="generic-container">
 		<label for="sort">Sort by:</label>
 		<select id="sort" value="no-order">
