--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<script type="module">
-		import { Account, nav } from "../Modules/Tools.js";
+		import { Account, nav } from "./Modules/Tools.js";
 		if (Account) {
 			nav("Upload Program", "Upload-Program", "Maze Escape Level Editor", "Maze-Escape-Level-Editor");
 		} else {
