--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/maze-escape-level-editor.css" />
-	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/scripts.js" defer></script>
+	<script type="module" src="./scripts.js" defer></script>
 </head>
 
 <body>
