--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -21,14 +21,14 @@
 	<div class="generic-container">
 		<nav>
 			<button id="reset">Reset</button>
-			<label for="tool">&nbsp;&nbsp;&nbsp;Tool:</label>
+			<label for="tool">&nbsp;Tool:</label>
 			<select id="tool" selected="Solid Wall">
 				<option value="Air">Air</option>
 				<option value="Solid Wall" selected>Solid Wall</option>
 				<option value="Player Spawn">Player Spawn</option>
 				<option value="Level Finish">Level Finish</option>
 			</select>
-			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+			<span>&nbsp;</span>
 			<button id="publish">Publish Level</button>
 		</nav>
 		<br>
