--- a/Dev/Luna/index.html
+++ b/Dev/Luna/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
-	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<link rel="icon" type="image/png" href="../../calculator-icon.png" />
+	<link rel="stylesheet" type="text/css" href="../../CSS/default.css" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/CDN/CSS/CodeBlocks/CodeBlocks.css" />
 	<style>
 		.code {
@@ -14,13 +14,11 @@
 			padding: 5px;
 		}
 	</style>
-	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/scripts.js" defer></script>
+	<script type="module" src="./scripts.js" defer></script>
 </head>
 
 <body>
-	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Luna&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/"><button>Dev</button></a></h1>
-	</nav>
+	<br>
 	<div class="generic-container">
 		<h2>Luna</h2>
 		<p>One of the best tools to compile Lua programs into executables runnable by a TI-Nspire calculator is Luna.</p>
