--- a/Dev/index.html
+++ b/Dev/index.html
@@ -5,16 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
-	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<link rel="icon" type="image/png" href="../calculator-icon.png" />
+	<link rel="stylesheet" type="text/css" href="../CSS/default.css" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/CDN/CSS/CodeBlocks/CodeBlocks.css" />
-	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/scripts.js" defer></script>
+	<script type="module" src="./scripts.js" defer></script>
 </head>
 
 <body>
-	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img>TI-Nspire Programs - Dev&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Dev/Luna/"><button>Luna</button></a></h1>
-	</nav>
+	<br>
 	<div class="generic-container">
 		<h2>TI-Nspire Dev</h2>
 		<p>Programming TI-Nspire calculators is easy! On TI-Nspire Programs, not only can you find programs for TI-Nspire calculators, but you also have access to a number of simple tutorials on how to get started making your first TI-Nspire calculator program.</p>
