--- a/Login/index.html
+++ b/Login/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs - Login</title>
-	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<link rel="icon" type="image/png" href="../calculator-icon.png" />
+	<link rel="stylesheet" type="text/css" href="../CSS/default.css" />
 	<script type="module" src="./scripts.js" defer></script>
 </head>
 
